2008-07-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #542587

	* e-online-button.c:
	* e-online-button.h:
	New widget implements the online/offline button used in the main
	window.  The button just maintains an "online" flag and displays
	the appropriate button image for the flag.

2008-17-14  Paolo Borelli  <pborelli@katamail.com>

	** Fix for bug #542889

	* e-search-bar.h:
	* widgets/misc/e-search-bar.c:
	* widgets/misc/e-task-widget.c:
	Port to the new gtk tooltip api.

2008-07-12  Paolo Borelli  <pborelli@katamail.com>

	** Fix for bug #542631

	* e-attachment-bar.c: use g_format_size_for_display instead of cut and
	pasted code.

2008-07-07  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #370731 (bugzilla.novell.com)

	* e-calendar-item.c (e_calendar_item_update),
	(e_calendar_item_draw_month), (e_calendar_item_draw_day_numbers),
	(e_calendar_item_recalc_sizes):
	* e-calendar-item.h: 
	Use MAX (<max width of day-names>, (2 * <max width of a digit>))
	to determine the minimal size for each cell. This prevents the numbers
	and day-names from getting fuzzy when using large font-sizes. 

2008-06-30  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #519536

	* e-activity-handler.c: (cancel_wrapper): Handle freeing of data
	safely.

2008-06-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #532597

	* e-selection-model-array.c: (e_selection_model_array_delete_rows):
	Do not leave selected more than one item if somebody else took care
	or reposition of the cursor row before the delete.

2008-06-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #340683

	* e-attachment-bar.c: (get_system_thumbnail), (scale_pixbuf),
	(e_attachment_bar_create_attachment_cache), (update):
	Allow creating thumbnails of non-pictures with a gnome's thumbnailer.

2008-06-03  Kjartan Maraas  <kmaraas@gnome.org>

	* e-cell-date-edit.c: (e_cell_date_edit_init):
	* e-dateedit.c: (create_children):
	* e-multi-config-dialog.c: (e_multi_config_dialog_init):