@@ -1,3 +1,11 @@
+2008-07-23  Milan Crha  <mcrha@redhat.com>
+
+	** Part of fix for bug #543943
+
+	* e-activity-handler.c: (e_activity_handler_operation_set_error):
+	* e-task-bar.c: (e_task_bar_class_init), (impl_finalize):
+	Leak fix.
+
 2008-07-20  Matthew Barnes  <mbarnes@redhat.com>
 
 	** Fixes part of bug #542587
